[gd_scene load_steps=9 format=2]

[ext_resource path="res://game/scenes/main/lawrence/3d/gameplay3d.tscn" type="PackedScene" id=1]
[ext_resource path="res://game/assets/art/general/highways/Red Highway.png" type="Texture" id=2]
[ext_resource path="res://game/assets/art/backgrounds/Hymn_BG 1.png" type="Texture" id=3]
[ext_resource path="res://game/assets/art/general/highways/Purple Highway.png" type="Texture" id=4]
[ext_resource path="res://game/scenes/main/lawrence/2d/gameplay.gd" type="Script" id=6]
[ext_resource path="res://game/assets/art/general/fonts/font_exbrat.tres" type="DynamicFont" id=7]

[sub_resource type="ViewportTexture" id=1]
viewport_path = NodePath("GameplayPerspectivized/Gameplay3DViewport")

[sub_resource type="Theme" id=2]
default_font = ExtResource( 7 )
Label/colors/font_color = Color( 0.223529, 0.243137, 0.635294, 1 )
Label/colors/font_color_shadow = Color( 0, 0, 0, 0 )
Label/colors/font_outline_modulate = Color( 1, 1, 1, 1 )
Label/constants/line_spacing = 3
Label/constants/shadow_as_outline = 0
Label/constants/shadow_offset_x = 1
Label/constants/shadow_offset_y = 1
Label/styles/normal = null

[node name="Gameplay" type="Node2D"]
script = ExtResource( 6 )

[node name="Background" type="Node2D" parent="."]

[node name="BackgroundTexture" type="TextureRect" parent="Background"]
margin_right = 40.0
margin_bottom = 40.0
texture = ExtResource( 3 )

[node name="GrowthHighwayTexture" type="TextureRect" parent="Background"]
margin_left = 285.0
margin_top = 329.0
margin_right = 1109.0
margin_bottom = 997.0
rect_scale = Vector2( 0.75, 0.75 )
texture = ExtResource( 2 )

[node name="DecayHighwayTexture" type="TextureRect" parent="Background"]
margin_left = 1017.0
margin_top = 329.0
margin_right = 1841.0
margin_bottom = 997.0
rect_scale = Vector2( 0.75, 0.75 )
texture = ExtResource( 4 )

[node name="GameplayPerspectivized" type="Node2D" parent="."]
position = Vector2( 960, 540 )

[node name="Gameplay3DViewport" type="Viewport" parent="GameplayPerspectivized"]
size = Vector2( 1920, 1080 )
transparent_bg = true
render_target_v_flip = true

[node name="Gameplay3D" parent="GameplayPerspectivized/Gameplay3DViewport" instance=ExtResource( 1 )]

[node name="Gameplay3DSprite" type="Sprite" parent="GameplayPerspectivized"]
texture = SubResource( 1 )

[node name="FeedbackGrowth" type="Label" parent="."]
margin_left = 216.21
margin_top = 743.472
margin_right = 454.21
margin_bottom = 835.472
rect_rotation = -47.5
theme = SubResource( 2 )
text = "PERFECT!"
align = 1

[node name="FeedbackDecay" type="Label" parent="."]
margin_left = 1543.0
margin_top = 568.0
margin_right = 1781.0
margin_bottom = 660.0
rect_rotation = 47.5
theme = SubResource( 2 )
text = "PERFECT!"
align = 1

[node name="ComboGrowth" type="Label" parent="."]
margin_left = 1250.0
margin_top = 830.0
margin_right = 1511.0
margin_bottom = 922.0
theme = SubResource( 2 )
align = 1

[node name="ComboDecay" type="Label" parent="."]
margin_left = 1250.0
margin_top = 830.0
margin_right = 1511.0
margin_bottom = 922.0
theme = SubResource( 2 )
align = 1

[node name="Score" type="Label" parent="."]
margin_left = 1350.0
margin_top = 13.0
margin_right = 1651.0
margin_bottom = 105.0
theme = SubResource( 2 )
text = "SCORE: 100"
align = 1

[connection signal="level_ended" from="GameplayPerspectivized/Gameplay3DViewport/Gameplay3D" to="." method="_on_Gameplay3D_level_ended"]
[connection signal="score_incremented" from="GameplayPerspectivized/Gameplay3DViewport/Gameplay3D" to="." method="_on_Gameplay3D_score_incremented"]
